# parktech

./: .gitignore  CHANGELOG.md  Makefile  README.md  package.yaml  parktech.cabal  stack.yaml
app/: Main.hs  Menu.hs
app/Database/: DatabaseManager.hs
app/Model/: Cliente.hs  Historico.hs  Vaga.hs  Veiculo.hs
app/Service/: ClienteService.hs  EstacionamentoService.hs  VagaService.hs  VeiculoService.hs
app/Util/: DatabaseManager.hs  InterfaceManager.hs
app/db/: andar1.txt  cliente.txt  historico.txt  vaga.txt  veiculo.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/: Main.hs  Menu.hs
haskell/Database/: DatabaseManager.hs
haskell/Model/: Cliente.hs  Vaga.hs
haskell/Service/: VagaService.hs
src/: Lib.hs
