cabal-version:      2.4
name:               parktech
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             João Henrique Simões Ramalho <>, Lorenna Victória Marinho Lucena <lorenna.lucena@ccc.ufcg.edu.br>,
                    Pedro René de Lucena Serey <serey.pedro@gmail.com>, Vandressa Galdino Soares <vandressa.soares@ccc.ufcg.edu.br>, 
                    Wendell Rafael Oliveira Nascimento <wendell.nascimento@ccc.ufcg.edu.br>
maintainer:         lorenna.lucena@ccc.ufcg.edu.br, serey.pedro@gmail.com, vandressa.soares@virtus.ufcg.edu.br, wendell.nascimento@ccc.ufcg.edu.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable parktech
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, strict ^>=0.4.0.1
    hs-source-dirs:   app
    default-language: Haskell2010
